# hangulang-python

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/hangulang/: __init__.py  _api.py  _cli.py  assets.py  exceptions.py  options.py
python/hangulang/integrations/: __init__.py  _payload.py  docling.py  langchain.py
src/: lib.rs
tests/: test_api.py  test_cli.py  test_integrations.py
