[package]
name = "hangulang-python"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "PyO3 bindings for the hangulang document conversion engine"
repository = "https://github.com/myeolinmalchi/hangulang-python"
homepage = "https://github.com/myeolinmalchi/hangulang-python"
readme = "README.md"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
hangulang-engine = { package = "hangulang", path = "vendor/hangulang", features = ["serde"] }
pyo3 = { version = "0.23.5", features = ["extension-module", "abi3-py310"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
