[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hangulang"
version = "0.1.0a0"
description = "Python bindings and integrations for the Rust hangulang document conversion engine"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "myeolinmalchi" },
]
keywords = ["hwp", "hwpx", "hangul", "doclang", "document-conversion"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=1.0,<2.0"]
docling = []
all = ["langchain-core>=1.0,<2.0"]
dev = [
  "langchain-core>=1.0,<2.0",
  "maturin>=1.7,<2.0",
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
hangulang = "hangulang._cli:main"

[project.urls]
Homepage = "https://github.com/myeolinmalchi/hangulang-python"
Repository = "https://github.com/myeolinmalchi/hangulang-python"
Changelog = "https://github.com/myeolinmalchi/hangulang-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/myeolinmalchi/hangulang-python/issues"

[tool.maturin]
python-source = "python"
module-name = "hangulang._native"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["hangulang"]
